--- a/Vistas/CSS/estilo.css
+++ b/Vistas/CSS/estilo.css
@@ -8,10 +8,13 @@
     background-size: 32px 32px;
     background-position: 0 0,16px 16px;
 }
-.cont_Titulo{
-    margin-top:40px;
+.cont_Titulo {
+    margin-top: 40px;
+    text-align: center;
+    width:100%;
 }
 .Titulo {
+   
     text-align: center;
     font-weight: 300;
     font-size: 3rem;
@@ -19,7 +22,8 @@
     border-radius: 20px;
     background-color: #a7abeb;
     padding: 15px;
-  
+    width: 50%;
+    margin:auto;
 }
 .Tabla_Login {
     align-content: center;
@@ -57,6 +61,15 @@
 .checkBox{
     cursor:pointer;
 }
+/* -- menu administrador  ---  */
+
+.usuario{
+    margin-right:10px;
+    text-align:right;
+    font-size:15pt;
+    color:red;
+}
+
 .Tabla {
     width: 70%;
    
