--- a/Vistas/CSS/estilo.css
+++ b/Vistas/CSS/estilo.css
@@ -67,7 +67,56 @@
     margin-right:10px;
     text-align:right;
     font-size:15pt;
-    color:red;
+    
+}
+.Tabla_Menu {
+    align-content: center;
+    text-align: center;
+    margin: auto;
+    background-color: #cdd8fe;
+    border-spacing: 15px; /* Espacio entre filas */
+    border: groove;
+    border-color: black;
+    border-radius: 10px;
+    border-width: 5px;
+    width: 30%;
+    height: 100px;
+   
+}
+.row_menu_titulo {
+    padding: 30px 20px;
+    border-bottom:solid;
+    border-width:5px;
+    border-color: black;
+}
+.titulo_menu{
+    font-size:20pt;
+}
+.row_menu {
+    padding: 20px 10px;
+    border-top: groove;
+    border-bottom: groove;
+    border-width: 5px;
+    border-color: black;
+    border-radius: 20px;
+}
+.menu_link {
+    text-decoration: none;
+    padding: 18px 120px;
+    width: 100%;
+    height: 100%;
+    background-color: #cdd8ff;
+    font-size: 15pt;
+}
+.cerrarSesion {
+    text-decoration: blink;
+    font-size: 15pt;
+    text-align: left;
+    margin-left: 10px;
+    border: medium;
+    border-radius: 20px;
+    background-color: #a7abeb;
+    padding: 10px;
 }
 
 .Tabla {
@@ -77,7 +126,7 @@
     
     background-color:black;
     color:white;
-    
+ 
 }
 
 .Columna2 {
