--- a/Vistas/CSS/estilo.css
+++ b/Vistas/CSS/estilo.css
@@ -74,40 +74,58 @@
     text-align: center;
     margin: auto;
     background-color: #cdd8fe;
-    border-spacing: 15px; /* Espacio entre filas */
+    border-spacing: 15px;
     border: groove;
     border-color: black;
     border-radius: 10px;
     border-width: 5px;
-    width: 30%;
-    height: 100px;
-   
+    width: 100%;
+    max-width: 400px;
+    height: auto;
+    display: flex;
+    flex-wrap:wrap;
+    justify-content: center;
+    
 }
 .row_menu_titulo {
+    width: 100%;
+    box-sizing: border-box;
     padding: 30px 20px;
-    border-bottom:solid;
-    border-width:5px;
+    border-bottom: solid;
+    border-width: 5px;
     border-color: black;
 }
 .titulo_menu{
     font-size:20pt;
 }
 .row_menu {
+    width: 100%;  
+    box-sizing: border-box; 
     padding: 20px 10px;
     border-top: groove;
     border-bottom: groove;
     border-width: 5px;
     border-color: black;
     border-radius: 20px;
+    overflow: hidden;
+  
 }
 .menu_link {
     text-decoration: none;
-    padding: 18px 120px;
-    width: 100%;
-    height: 100%;
-    background-color: #cdd8ff;
+    padding: 10px 20px;
+    width: auto;
+    max-width: 100%;
+    box-sizing: border-box;
+    
     font-size: 15pt;
+    display: block; 
+    width: 100%; 
+    box-sizing: border-box;
+    text-align:center;
 }
+
+
+
 .cerrarSesion {
     text-decoration: blink;
     font-size: 15pt;
